--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -17,18 +17,18 @@
     <p>About the site</p>
     <h2>From Jen&rsquo;s Cookbook</h2>
     <ul>
-      <li>Tapenade (Olive Spread)</li>
+      <li><a href="recipes/tapenadehtml">Tapenade (Olive Spread)</a></li>
       <li>Garlic Salmon</li>
       <li>Linguine with Clam Sauce</li>
       <li>Couscous with Peas and Mint</li>
     </ul>
     <h2>Good Food on the Web</h2>
     <ul>
-      <li>The Food Network</li>
-      <li>Epicurious </li>
-    </ul>
-    <p>            
-      <small>Copyright 2006, Jennifer Robbins</small>
-    </p>
-  </body>
+      <li><a href=http://wwwfoodtvcom/>The Food Network</a></li>
+    <li>Epicurious </li>
+  </ul> 
+  <p>            
+    <small>Copyright 2006, Jennifer Robbins</small>
+  </p>
+</body>
 </html>
